frontend_tests/negative/module_import_cycle/lib/lib.go
package lib

import _ "example.com/renvotests/negative/module_cycle/cmd/app"
